Refactor deployment